<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_dashboard"
                android:icon="@drawable/ic_baseline_dashboard_24"
                android:title="@string/menu_dashboard"/>
        <item
                android:id="@+id/nav_job"
                android:icon="@drawable/ic_baseline_work_24"
                android:title="@string/menu_Job"
        />
        <item
                android:id="@+id/nav_payment"
                android:icon="@drawable/ic_baseline_account_balance_wallet_24"
                android:title="@string/menu_payment"/>

        <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/menu_setting"/>
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_baseline_cloud_upload_24"
            android:title="@string/menu_upload"/>
    </group>
</menu>