<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9ED8DF"
        tools:context=".ui.home.DashboardFragment">


    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginBottom="5dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/linearLayout">
        <androidx.cardview.widget.CardView
                android:id="@+id/profile_act"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="10dp"
              android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:padding="10dp">

            <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                <TextView
                        android:layout_marginTop="5dp"
                        android:text="Profile"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView1"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_horizontal"/>

                <TextView
                        android:layout_marginLeft="10dp"
                        android:text="@string/profile_inst"
                        android:textColor="@color/black"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        android:layout_marginBottom="25dp"

                        android:layout_below="@+id/textView1" android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true" android:layout_marginStart="10dp"
                        android:layout_alignParentLeft="true"/>

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:foregroundGravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:scaleType="fitXY"

                        android:src="@drawable/person_icon"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_toEndOf="@+id/textView2"
                        android:layout_toRightOf="@+id/textView1"
                        android:layout_alignParentTop="true" android:layout_alignParentBottom="true"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:id="@+id/Legal_card"
                android:layout_below="@id/profile_act"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:padding="10dp">

            <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                <TextView
                        android:layout_marginTop="5dp"
                        android:text="Legal Agreement"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_horizontal"/>

                <TextView
                        android:layout_marginLeft="10dp"
                        android:text="@string/legal_docs"
                        android:textColor="@color/black"
                        android:layout_width="197dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView8"
                        android:layout_marginBottom="25dp"

                        android:layout_alignParentBottom="true"

                        android:layout_below="@+id/textView7"/>

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:foregroundGravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"

                        android:scaleType="fitXY"
                        android:src="@drawable/docs_legal" android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="19dp" android:layout_alignParentBottom="true"
                        android:layout_toEndOf="@+id/textView8"
                        android:layout_toRightOf="@+id/textView8"
                        android:layout_alignParentTop="true"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/Drone_card"

                android:layout_below="@id/Legal_card"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"

                android:padding="10dp">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                <TextView
                        android:layout_marginTop="5dp"
                        android:text="Drone Detail"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView12"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_horizontal"/>

                <TextView
                        android:layout_marginLeft="10dp"
                        android:text="@string/Drone_detail"
                        android:textColor="@color/black"
                        android:layout_width="200dp"

                        android:layout_height="wrap_content"
                        android:id="@+id/textView11"
                        android:layout_marginBottom="25dp"
                        android:layout_alignParentBottom="true"
                        android:layout_below="@+id/textView12"/>
                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:foregroundGravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:scaleType="fitXY"

                        android:src="@drawable/ic_drone"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_toEndOf="@+id/textView11"
                        android:layout_toRightOf="@+id/textView11"
                       android:layout_alignParentTop="true"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:id="@+id/document_card"

                android:layout_below="@id/Drone_card"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:padding="10dp">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                <TextView
                        android:layout_marginTop="5dp"
                        android:text="Document upload"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView10"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_horizontal" android:layout_alignParentTop="true"/>

                <TextView
                        android:layout_marginLeft="10dp"
                        android:text="@string/upload_text"
                        android:textColor="@color/black"
                        android:layout_width="201dp"
                        android:layout_height="54dp"
                        android:id="@+id/textView9"

                        android:layout_marginBottom="25dp"
                        android:layout_below="@+id/textView10" android:layout_alignParentBottom="true"/>

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:foregroundGravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/upload_icon"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_toEndOf="@+id/textView9"
                        android:layout_toRightOf="@+id/textView9"
                         android:layout_alignParentTop="true"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/job_card"

                android:layout_below="@id/document_card"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:padding="10dp">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                <TextView
                        android:layout_marginTop="5dp"
                        android:text="Payment Transaction"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView17"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_horizontal" android:layout_alignParentTop="true"/>

                <TextView
                        android:layout_marginLeft="10dp"
                        android:text="@string/payment_text"
                        android:textColor="@color/black"
                        android:layout_width="201dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView18"

                        android:layout_marginBottom="25dp"
                        android:layout_below="@+id/textView17"
                        android:layout_alignParentBottom="true"/>

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:foregroundGravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/payment_icon"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                         android:layout_toEndOf="@+id/textView17"
                        android:layout_toRightOf="@+id/textView17"
                        android:layout_alignParentTop="true"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>